# mcp

./: Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml  README.md
crates/mcp/: Cargo.toml  README.md
crates/sdk/: Cargo.toml  README.md
rmcp/axum/: Cargo.toml  README.md
rmcp/axum/src/: auth.rs  lib.rs
rmcp/axum/src/auth/: api_key.rs  bearer.rs  jwt.rs  mod.rs
rmcp/axum/src/auth/oauth/: error.rs  metadata.rs  mod.rs
rmcp/gateway/: Cargo.toml  README.md
rmcp/inspect/: Cargo.toml  README.md
rmcp/inspect/src/: cli.rs  client.rs  error.rs  inspect.rs  lib.rs
rmcp/inspect/src/client/: inspect.rs  mod.rs
rmcp/inspect/src/cmd/: call.rs  mod.rs
rmcp/manager/: Cargo.toml  README.md
rmcp/registry/: Cargo.toml  README.md  build.rs
rmcp/registry/schemas/: openapi.yaml
rmcp/registry/src/: lib.rs
rmcp/wasm/: Cargo.toml  README.md
std/filesystem/: Cargo.toml
std/filesystem/src/: lib.rs  tools.rs  validate.rs
std/time/: Cargo.toml
std/time/src/: lib.rs
