[workspace]
members = ["crates/*", "rmcp/*", "std/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
wmcp = { path = "crates/mcp" }
wmcp-sdk = { path = "crates/sdk" }
wmcp-cli = { path = "crates/cli" }
rmcp-axum = { path = "rmcp/axum" }
rmcp-gateway = { path = "rmcp/gateway" }
rmcp-inspect = { path = "rmcp/inspect" }
rmcp-manager = { path = "rmcp/manager" }
rmcp-registry = { path = "rmcp/registry" }
rmcp-wasm = { path = "rmcp/wasm" }
wmcp-filesystem = { path = "std/filesystem" }
wmcp-time = { path = "std/time" }

# crates-io
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
glob = "0.3"
http = "1"
jsonwebtoken = "9"
prettyplease = "0.2"
regress = "0.10"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
rmcp = "0.16.0"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = "2"
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros", "rt", "time"] }
tokio-util = "0.7"
tower = "0.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
typify = "0.6"
