[package]
name = "wmcp-filesystem"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wmcp-filesystem"
path = "src/bin/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
glob = { workspace = true }
rmcp = { workspace = true, features = ["server", "macros", "transport-io"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
