[package]
name = "wmcp-time"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wmcp-time"
path = "src/bin/main.rs"

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
clap = { workspace = true }
rmcp = { workspace = true, features = ["server", "macros", "transport-io"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
